--- a/.pylintrc
+++ b/.pylintrc
@@ -33,8 +33,8 @@ ignore-patterns=^\.#
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-; init-hook='import sys; sys.path.append("E:\python\juggler")'
-init-hook='import sys; sys.path.append("C:\Projetos\Python\juggler")'
+init-hook='import sys; sys.path.append("E:\python\juggler")'
+; init-hook='import sys; sys.path.append("C:\Projetos\Python\juggler")'
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
