--- a/.pylintrc
+++ b/.pylintrc
@@ -33,7 +33,7 @@ ignore-patterns=^\.#
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-init-hook='import sys; sys.path.append("C:\Projetos\Python\juggler")'
+init-hook='import sys; sys.path.append("/home/careca/Python/juggler"); sys.path.append("C:\Projetos\Python\juggler")'
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
